1/30/13 #3243, update copyright to 2013
11/2/12 #3472, call SimSharingManager.init in test mains in package phetcommon.simsharing.components
11/2/12 #3472, modify default initialization of SimSharingManager
10/26/12 add MathUtil.isInteger (initial use in line-graphing)
10/25/12 #3303, Fixes for DefaultDecimalFormat
10/4/12 #3450, added "Sylfaen" as the preferred font for Armenian (hy)
10/1/12 Added "remove all clock listeners" methods to clocks
9/10/12 added DoubleRange(IntegerRange) constructor, DoubleRange.toString, IntegerRange.toString
8/15/12 Migrated FJUtils to phetcommon for reuse in other sims
8/15/12 Added createShapeFromPoints(Iterable<Vector2D>)
7/31/12 #3395, add -startModule program arg for specifying start module (dev feature)
7/20/12 Use @EqualsAndHashCode(callSuper = false) instead of @Data to avoid compile time warnings, see #3374
7/20/12 Merged getScaledInstance and times into a single method, see #3374
7/20/12 Merged getSubtractedInstance and minus into a single method, see #3374
7/20/12 Merged getAddedInstance and plus into a single method, see #3374
7/20/12 Merged getDistance and distance into a single method, see #3374
7/20/12 Style change, made single line methods read in a single line for Vector2D classes, see #3374
7/20/12 Added equals/hashcode/toString using Lombok, see #3374
7/20/12 Renamed ImmutableVector2D->Vector2D, see #3374
7/20/12 Renamed Vector2D->MutableVector2D, see #3374
7/19/12 Changed the Vector2D hierarchy from "Vector2D extends ImmutableVector2D" to "Vector2D extends AbstractVector2D + ImmutableVector2D extends AbstractVector2D", see #3374
7/19/12 Moved more methods from ImmutableVector2D to AbstractVector2D, see #3374
7/19/12 Extracted AbstractVector2D as superclass of ImmutableVector2D, see #3374
7/19/12 Added Lombok and Functional Java as dependencies, see #3390
7/17/12 add BufferedImageUtils.toImage(Icon)
7/11/12 #3375, Load the audio input stream and decorate with a BufferedInputStream to support mark/reset, see #3375